--- a/skills.html
+++ b/skills.html
@@ -6,7 +6,7 @@
         <title>Eric Wiker skills</title>
     </head>
     <body>
-        <a href="about.html">About!</a>
+        <a href="index.html">About!</a>
         <a href="contact.html">Contact!</a>
         <a href="education.html">Education!</a>
         <a href="experience.html">Experience!</a>
