--- a/interests.html
+++ b/interests.html
@@ -4,28 +4,35 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Eric Wiker intrests</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <a href="index.html">About!</a>
-        
-        <a href="education.html">Education!</a>
-        <a href="experience.html">Experience!</a>
-        <a href="interests.html">Intrests!</a>
-        <a href="skills.html">Skills!</a>
-
-        <p>
-            <img src="giant-panda-12560704.jpg" width="400" alt="nothing">
-        </p>
-
-        <h1>Eric Wiker</h1>
-        &nbsp;
-        <h2>Interests</h2>
         <ul>
-            <li>Skiing</li>
-            <li>Biking</li>
-            <li>Fishing (see fish <a href="https://c8.alamy.com/comp/BJCKYJ/man-holding-a-large-smelly-fish-BJCKYJ.jpg" target="_blank">here</a>)</li>
-            <li>Eating</li>
-            <li>Eating while skiing</li>
+            <li><a href="index.html">About!</a></li>
+            <li><a href="education.html">Education!</a></li>
+            <li><a href="experience.html">Experience!</a></li>
+            <li><a href="interests.html">Intrests!</a></li>
+            <li><a href="skills.html">Skills!</a></li>
         </ul>
+
+        <section class="img">
+            <img src="giant-panda-12560704.jpg" width="400" alt="nothing">
+        
+            <h1 class="img">
+                Eric Wiker
+            </h1>
+        </section>
+        &nbsp;
+        <div class="vert"></div>
+        <section class="checkbox">
+        <h2 id="h2_in">Interests</h2>
+        <ul class="ints">
+            <li class="in">Skiing</li>
+            <li class="in">Biking</li>
+            <li class="in">Fishing (see fish <a class="in" href="https://c8.alamy.com/comp/BJCKYJ/man-holding-a-large-smelly-fish-BJCKYJ.jpg" target="_blank">here</a>)</li>
+            <li class="in">Eating</li>
+            <li class="in">Eating while skiing</li>
+        </ul>
+    </section>
     </body>
 </html>
