--- a/education.html
+++ b/education.html
@@ -4,14 +4,16 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Eric Wiker education</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <a href="index.html">About!</a>
-        
-        <a href="education.html">Education!</a>
-        <a href="experience.html">Experience!</a>
-        <a href="interests.html">Intrests!</a>
-        <a href="skills.html">Skills!</a>
+        <ul>
+            <li><a href="index.html">About!</a></li>
+            <li><a href="education.html">Education!</a></li>
+            <li><a href="experience.html">Experience!</a></li>
+            <li><a href="interests.html">Intrests!</a></li>
+            <li><a href="skills.html">Skills!</a></li>
+        </ul>
 
         <p>
             <img src="giant-panda-12560704.jpg" width="400" alt="nothing">
@@ -19,6 +21,8 @@
 
         <h1>Eric Wiker</h1>
         &nbsp;
+        <div class="vert"></div>
+        <section class="checkbox">
         <h2>Education</h2>
 
 
@@ -29,5 +33,6 @@
         <p>Calgary, Canada    2011-2015</p>
         &nbsp;
         <p><mark><em>Credentials available upon request</em></mark></p>
+        </section>
     </body>
 </html>
