--- a/education.html
+++ b/education.html
@@ -15,11 +15,13 @@
             <li><a href="skills.html">Skills!</a></li>
         </ul>
 
-        <p>
+        <section class="img">
             <img src="giant-panda-12560704.jpg" width="400" alt="nothing">
-        </p>
-
-        <h1>Eric Wiker</h1>
+        
+            <h1 class="img">
+                Eric Wiker
+            </h1>
+        </section>
         &nbsp;
         <div class="vert"></div>
         <section class="checkbox">
