--- a/education.html
+++ b/education.html
@@ -7,12 +7,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <ul>
-            <li><a href="index.html">About!</a></li>
-            <li><a href="education.html">Education!</a></li>
-            <li><a href="experience.html">Experience!</a></li>
-            <li><a href="interests.html">Intrests!</a></li>
-            <li><a href="skills.html">Skills!</a></li>
+        <ul id="navbar" >
+            <li id="navele"><a id="navadd" href="index.html">About!</a></li>
+            <li id="navele"><a id="navadd" href="education.html">Education!</a></li>
+            <li id="navele"><a id="navadd" href="experience.html">Experience!</a></li>
+            <li id="navele"><a id="navadd" href="interests.html">Intrests!</a></li>
+            <li id="navele"><a id="navadd" href="skills.html">Skills!</a></li>
         </ul>
 
         <section class="img">
