--- a/interests.html
+++ b/interests.html
@@ -7,12 +7,12 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <ul>
-            <li><a href="index.html">About!</a></li>
-            <li><a href="education.html">Education!</a></li>
-            <li><a href="experience.html">Experience!</a></li>
-            <li><a href="interests.html">Intrests!</a></li>
-            <li><a href="skills.html">Skills!</a></li>
+        <ul id="navbar" >
+            <li id="navele"><a id="navadd" href="index.html">About!</a></li>
+            <li id="navele"><a id="navadd" href="education.html">Education!</a></li>
+            <li id="navele"><a id="navadd" href="experience.html">Experience!</a></li>
+            <li id="navele"><a id="navadd" href="interests.html">Intrests!</a></li>
+            <li id="navele"><a id="navadd" href="skills.html">Skills!</a></li>
         </ul>
 
         <section class="img">
@@ -24,15 +24,19 @@
         </section>
         &nbsp;
         <div class="vert"></div>
+
+
         <section class="checkbox">
         <h2 id="h2_in">Interests</h2>
-        <ul class="ints">
-            <li class="in">Skiing</li>
-            <li class="in">Biking</li>
-            <li class="in">Fishing (see fish <a class="in" href="https://c8.alamy.com/comp/BJCKYJ/man-holding-a-large-smelly-fish-BJCKYJ.jpg" target="_blank">here</a>)</li>
-            <li class="in">Eating</li>
-            <li class="in">Eating while skiing</li>
+        <ul id="ints">
+            <li id="in">Skiing</li>
+            <li id="in">Biking</li>
+            <li id="in">Fishing (see fish <a class="in" href="https://c8.alamy.com/comp/BJCKYJ/man-holding-a-large-smelly-fish-BJCKYJ.jpg" target="_blank">here</a>)</li>
+            <li id="in">Eating</li>
+            <li id="in">Eating while skiing</li>
         </ul>
     </section>
+
     </body>
+
 </html>
